# cloudberry

./: .env.example  .git-filter-repo-replacements.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.ini  config.ini.example  logging.ini  main.py  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt  scratchpad.md  settings.py  setup.sh  urls_H3.py  urls_H4.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  refresh-wittypi-manual.yml
Documentation/: camera_suite_raspberry_install.txt  setup_command_log.redacted.txt
archive/shutter-island/: README.md
archive/shutter-island-node/: README.md  field-notes.txt
cloudberry/: __init__.py  camera.py  cli.py  common.py  config.py  gopro.py  gopro_urls.py  logging_setup.py  queue.py  s3.py  secrets.py  shutdown.py  validate.py
docs/: README.md  aws-iam-policy.json  github-repo-settings.md  migration-v3.md  sudoers-cloudberry-shutdown
docs/field/: README.md  camera_suite_raspberry_install.txt  secrets-reference.md  setup_command_log.redacted.txt
docs/future/: hero5.md
script/: gopro.sh  install_ffmpeg.sh  test.sh
scripts/: gopro.sh  wittypi-setup.sh
systemd/: cloudberry.service
tests/: test_camera.py  test_cli.py  test_common.py  test_config.py  test_gopro.py  test_gopro_common.py  test_logging.py  test_queue.py  test_s3.py  test_secrets.py  test_shutdown.py  test_validate.py
utils/: common.py  config_util.py  secrets.py
(+29 files in other folders)
